# TelChat

./: .editorconfig  CMakeLists.txt  README.md  run.sh
include/: connection.hpp  connection_manager.hpp  connection_state.hpp  conversation.hpp  conversation_message.hpp  input_reader.hpp  listener.hpp  renderer.hpp
src/: connection.cpp  connection_manager.cpp  connection_state.cpp  conversation.cpp  input_reader.cpp  listener.cpp  main.cpp  renderer.cpp
